--- a/Aula 4 - Validação de Formulários/index.html
+++ b/Aula 4 - Validação de Formulários/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="listaTelefonica">
 <head>
+	<meta charset="UTF-8">
 	<title>Lista Telefonica</title>
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
 	<style type="text/css">
@@ -45,6 +46,7 @@
 			$scope.adicionarContato = function (contato) {
 				$scope.contatos.push(angular.copy(contato));
 				delete $scope.contato;
+				$scope.contatoForm.$setPristine();
 			};
 			$scope.apagarContatos = function (contatos) {
 				$scope.contatos = contatos.filter(function (contato) {
@@ -83,15 +85,28 @@
 			</tr>
 		</table>
 		<hr/>
-	
-		
-		<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome" />
-		<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone"/>
-		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras"> 
-			<option value="">Selecione uma operadora</option>
-		</select>
 
-		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar Contato</button>
+		<form name="contatoForm">
+			<input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="10"/>
+			<input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true"/>
+			<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras"> 
+				<option value="">Selecione uma operadora</option>
+			</select>
+		</form>
+
+		<div ng-show="contatoForm.nome.$error.required && contatoForm.nome.$dirty" class="alert alert-danger">
+			Por favor, preencha o campo nome!
+		</div>
+
+		<div ng-show="contatoForm.nome.$error.minlength" class="alert alert-danger">
+			O campo nome deve conter no mínimo 10 caracteres.
+		</div>
+
+		<div ng-show="contatoForm.telefone.$invalid && contatoForm.telefone.$dirty" class="alert alert-danger">
+			Por favor, preencha o campo telefone!
+		</div>
+
+		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
 		<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-disabled="isContatoSelecionado(contatos)">Apagar Contatos</button>
 
 	</div>
