--- a/Aula 4 - Validação de Formulários/index.html
+++ b/Aula 4 - Validação de Formulários/index.html
@@ -26,8 +26,9 @@
 		}
 	</style>
 	<script src="lib/angular/angular.js"></script>
+	<script src="lib/angular/angular-messages.js"></script>
 	<script type="text/javascript">
-		angular.module("listaTelefonica", []);
+		angular.module("listaTelefonica", ["ngMessages"]);
 		angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function ($scope) {
 			$scope.app = "Lista Telefonica";
 			$scope.contatos = [
@@ -88,22 +89,28 @@
 
 		<form name="contatoForm">
 			<input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="10"/>
-			<input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true"/>
+			<input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/"/>
 			<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras"> 
 				<option value="">Selecione uma operadora</option>
 			</select>
 		</form>
 
-		<div ng-show="contatoForm.nome.$error.required && contatoForm.nome.$dirty" class="alert alert-danger">
-			Por favor, preencha o campo nome!
+		<div ng-messages="contatoForm.nome.$error">
+			<div ng-message="required && contatoForm.nome.$dirty" class="alert alert-danger">
+				Por favor, preencha o campo nome!
+			</div>
+
+			<div ng-message="minlength" class="alert alert-danger">
+				O campo nome deve conter no mínimo 10 caracteres.
+			</div>
 		</div>
 
-		<div ng-show="contatoForm.nome.$error.minlength" class="alert alert-danger">
-			O campo nome deve conter no mínimo 10 caracteres.
-		</div>
-
-		<div ng-show="contatoForm.telefone.$invalid && contatoForm.telefone.$dirty" class="alert alert-danger">
+		<div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger">
 			Por favor, preencha o campo telefone!
+		</div>
+
+		<div ng-show="contatoForm.telefone.$error.pattern" class="alert alert-danger">
+			O campo telefone deve ter o formato DDDDD-DDDD
 		</div>
 
 		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
