--- a/Aula 5 - Aplicando Filtros/index.html
+++ b/Aula 5 - Aplicando Filtros/index.html
@@ -30,10 +30,10 @@
 	<script src="lib/angular/angular-locale_pt-br.js"></script>
 	<script type="text/javascript">
 		angular.module("listaTelefonica", ["ngMessages"]);
-		angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function ($scope) {
+		angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function ($scope, $filter) {
 			$scope.app = "Lista Telefonica";
 			$scope.contatos = [
-				{nome: "Pedro", telefone: "9999-8888", data: new Date(), operadora: {nome: "Claro", codigo: 21, categoria: "Celular"}, cor: "blue"},
+				{nome: $filter('uppercase')("Pedro"), telefone: "9999-8888", data: new Date(), operadora: {nome: "Claro", codigo: 21, categoria: "Celular"}, cor: "blue"},
 				{nome: "Maria", telefone: "9999-8877", data: new Date(), operadora: {nome: "GVT", codigo: 25, categoria: "Fixo"}, cor: "yellow"},
 				{nome: "Ana", telefone:   "9999-8866", data: new Date(), operadora: {nome: "Tim", codigo: 41, categoria: "Celular"},cor: "red"}
 			];
@@ -85,9 +85,9 @@
 				<th style="text-align: center;"><a href="" ng-click="ordenarPor('data')">Data</a></th>
 				<th></th>
 			</tr> 
-			<tr ng-class="{negrito: contato.selecionado}" ng-repeat="contato in contatos | limitTo:2 | filter:{nome: busca} | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao">
+			<tr ng-class="{negrito: contato.selecionado}" ng-repeat="contato in contatos | limitTo:10 | filter:{nome: busca} | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao">
 				<td><input type="checkbox" ng-model="contato.selecionado"></td>
-				<td>{{contato.nome | uppercase}}</td>
+				<td>{{contato.nome}}</td>
 				<td>{{contato.telefone}}</td>
 				<td>{{contato.operadora.nome | lowercase}}</td>
 				<td>{{contato.data | date:'dd/MM/yyyy HH:MM'}}</td>
